--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.2",
+    "@vue-storefront/cache": "^2.7.1",
+    "@vue-storefront/redis-cache": "^1.0.1",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
